--- a/dados.ipynb
+++ b/dados.ipynb
@@ -67,25 +67,25 @@
     "# Contextualização\n",
     "\n",
     "Atualmente, com a evolução da tecnologia tornou se possível a construção de uma comunidade baseado em seus gostos musicais a fim de criar uma maior interatividade entre as pessoas. Entretanto muitas pessoas não sabem o estilo  em que está mais inserido e com isso acaba não interagindo com pessoas que gostam dos mesmos artistas, estilos musicais. Portanto, o objetivo desse projeto é classificar/prever  o gênero musical de uma determinada pessoa. Sendo que essa  'previsão' terá como parâmetros informações como 'nome do artista', 'instrumentalidade', 'energia' e entre outros para que seja possível a realização da classificação/previsão.\n",
-    "## Entendendo a base de dados utilizada: \n",
-    "unique ID for each music -\n",
-    "artist name -\n",
-    "track name -\n",
-    "how popular of this music -\n",
-    "acousticness -\n",
-    "danceability -\n",
-    "the duration of the music in ms -\n",
-    "energy -\n",
-    "instrumentalness -\n",
-    "music key -\n",
-    "liveness -\n",
-    "loudness -\n",
-    "speechiness -\n",
-    "mode -\n",
-    "tempo -\n",
-    "date -\n",
-    "our Class -\n",
-    "valence -\n"
+    "\n",
+    "## Entendendo as features\n",
+    "\n",
+    "- **`artist_name`**\n",
+    "- **`track_name`**\n",
+    "- **`popularity`**\n",
+    "- **`acousticness`**\n",
+    "- **`danceability`**\n",
+    "- **`duration_ms`**\n",
+    "- **`energy`**\n",
+    "- **`instrumentalness`**\n",
+    "- **`key`**\n",
+    "- **`liveness`**\n",
+    "- **`loudness`**\n",
+    "- **`mode`**\n",
+    "- **`speechiness`**\n",
+    "- **`tempo`**\n",
+    "- **`valence`**\n",
+    "- **`music_genre`**\n"
    ]
   },
   {
