--- a/dados.ipynb
+++ b/dados.ipynb
@@ -474,6 +474,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Explicação do Gráfico\n",
+    "____\n",
+    "\n",
+    "1) \n",
+    "2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### `acousticness` x `music_genre`"
    ]
   },
@@ -511,6 +522,17 @@
     "feature = 'acousticness'\n",
     "histogramas(feature);\n",
     "df.boxplot(column=feature, by='music_genre');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explicação do Gráfico\n",
+    "___\n",
+    "\n",
+    "1)\n",
+    "2)"
    ]
   },
   {
@@ -560,6 +582,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Explicação do Gráfico\n",
+    "___\n",
+    "1)\n",
+    "2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### `duration(ms)` x `music_genre`"
    ]
   },
@@ -597,6 +629,17 @@
     "feature = 'duration_ms'\n",
     "histogramas(feature);\n",
     "df.boxplot(column=feature, by='music_genre');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explicação do Gráfico\n",
+    "___\n",
+    "\n",
+    "1)\n",
+    "2)"
    ]
   },
   {
@@ -646,6 +689,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Explicação do Gráfico\n",
+    "___\n",
+    "\n",
+    "1)\n",
+    "2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### `instrumentalness` x `music_genre`"
    ]
   },
@@ -683,6 +737,17 @@
     "feature = 'instrumentalness'\n",
     "histogramas(feature);\n",
     "df.boxplot(column=feature, by='music_genre');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explicação do Gráfico\n",
+    "___\n",
+    "\n",
+    "1)\n",
+    "2)"
    ]
   },
   {
@@ -732,6 +797,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Explicação do Gráfico\n",
+    "___\n",
+    "\n",
+    "1)\n",
+    "2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### `loudness` x `music_genre`"
    ]
   },
@@ -769,6 +845,17 @@
     "feature = 'loudness'\n",
     "histogramas(feature);\n",
     "df.boxplot(column=feature, by='music_genre');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explicação do Gráfico\n",
+    "___\n",
+    "\n",
+    "1)\n",
+    "2)"
    ]
   },
   {
@@ -818,6 +905,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Explicação do Gráfico\n",
+    "___\n",
+    "\n",
+    "1)\n",
+    "2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### `valence` x `music_genre`"
    ]
   },
@@ -861,6 +959,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Explicação do Gráfico\n",
+    "___\n",
+    "\n",
+    "1)\n",
+    "2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Mapa de calor para observar as correlações das variáveis "
    ]
   },
@@ -887,6 +996,16 @@
     "sn.heatmap(df.corr(), cmap=\"YlGnBu\")\n",
     "plt.title('Heatmap de correlação')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explicação do Gráfico\n",
+    "___\n",
+    "\n",
+    "1)"
    ]
   },
   {
@@ -1051,6 +1170,13 @@
    "metadata": {},
    "source": [
     "# **Segundo Modelo:** Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Uma árvore de decisão (Decision Tree) é uma estrutura semelhante a um fluxograma em que cada nó interno representa um \"teste\" em um atributo (por exemplo, se um cara ou coroa dá cara ou coroa), cada ramo representa o resultado do teste, e cada nó folha representa um rótulo de classe (decisão tomada após calcular todos os atributos). Os caminhos da raiz à folha representam as regras de classificação."
    ]
   },
   {
