--- a/dados.ipynb
+++ b/dados.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esperamos trabalhar no diretório c:\\Users\\m_gab\\OneDrive\\Área de Trabalho\\Insper\\2 semestre\\Cdados\\P2\\Projeto_2_Cdados\n"
+      "Esperamos trabalhar no diretório c:\\Users\\Joao\\Projeto_2_Cdados\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "6    0.230  Electronic  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "Electronic          4032"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,24 @@
     "\n",
     "Na análise exploratória, nosso objetivo é descobrir quais variáveis são significantes para a predição, para isso usamos o boxplot para visualizar os dados e com isso tirar conclusoes sobre quais variáveis são importantes para a predição, e quais não são.\n",
     "- Primeiro vamos explicar como o boxplot é utilizado para visualizar os dados, O gráfico de box-plot foi criado pelo estatístico John Tukey há quase 50 anos, e é usado até hoje nos dando uma clareza da distribuição dos dados numéricos, resumidos em cinco números: mínimo, primeiro quartil, mediana, terceiro quartil, e máximo. Esses valores são calculados ordenando primeiramente a amostra do menor para o maior. ~É uma ferramenta gráfica que permite visualizar a distribuição e valores discrepantes (outliers) dos dados, fornecendo assim um meio complementar para desenvolver uma perspectiva sobre o caráter dos dados. Além disso, o boxplot também é uma disposição gráfica comparativa. Observe a figura do boxplot. Note que o local onde a haste vertical começa (de baixo para cima) indica o mínimo (excetuando algum possível valor extremo ou outlier) e, onde a haste termina indica o máximo (também excetuando algum possível outlier).\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "![title](imagens/boxplot.png)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "- O retângulo no meio dessa haste possui três linhas horizontais: a linha de baixo, que é o próprio contorno externo inferior do retângulo, indica o primeiro quartil. A de cima, que também é o próprio contorno externo superior do retângulo, indica o terceiro quartil. A linha interna indica o segundo quartil ou mediana,os asteriscos ou pontos que ás vezes aparecem no boxplot indicam que aquelas observações são atípicas, valores discrepantes, extremos ou outliers.\n",
     "## **Como interpretar o boxplot?**\n",
     "O boxplot nos fornece uma análise visual da posição, dispersão, simetria, caudas e valores discrepantes (outliers) do conjunto de dados.\n",
@@ -420,7 +437,8 @@
     " - **Simetria** – Um conjunto de dados que tem uma distribuição simétrica, terá a linha da mediana no centro do retângulo. Quando a linha da mediana está próxima ao primeiro quartil, os dados são assimétricos positivos e quando a posição da linha da mediana é próxima ao terceiro quartil, os dados são assimétricos negativos. Vale ressaltar que a mediana é a medida de tendência central mais indicada quando os dados possuem distribuição assimétrica, uma vez que a média aritmética é influenciada pelos valores extremos.\n",
     " - **Caudas** – As linhas que vão do retângulo até aos outliers podem fornecer o comprimento das caudas da distribuição.\n",
     " - **Outliers** – Já os outliers indicam possíveis valores discrepantes. No boxplot, as observações são consideradas outliers quando estão abaixo ou acima do limite de detecção de outliers.\n",
-    "O limite de detecção de outliers é construído utilizando o intervalo interquartílico, dado pela distância entre o primeiro e o terceiro quartil. Sendo assim, os limites inferior e superior de detecção de outlier são dados por:\n",
+    " \n",
+    " O limite de detecção de outliers é construído utilizando o intervalo interquartílico, dado pela distância entre o primeiro e o terceiro quartil. Sendo assim, os limites inferior e superior de detecção de outlier são dados por:\n",
     " - Limite Inferior = Primeiro Quartil – 1,5 * (Terceiro Quartil – Primeiro Quartil)\n",
     " - Limite Superior = Terceiro Quartil + 1,5 * (Terceiro Quartil – Primeiro Quartil)"
    ]
@@ -434,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1133,7 @@
        "RandomForestRegressor(n_estimators=200, n_jobs=-1, random_state=42)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1201,7 @@
        "<AxesSubplot:title={'center':'Matriz de confusão'}>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1224,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
